# GameTrying

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: accumulator.h  actor.cpp  actor.h  instance_manager.cpp  instance_manager.h  main.cpp  player.cpp  player.h  plugin.cpp  plugin.h  settings.h  timer.cpp  timer.h  utils.cpp  utils.h
src/plugins/: collision.cpp  collision.h
